# Ubuntu_Linux

./: KivyMD.md  README.md  qt.md
QML_example/: Q_PROPERTY.md  basic.md  gridLayout.md.md
aplicacion kivy/: main.kv  main.py
qt/: Qt_Widget.md  ejemplos_uso.md
turtlesim/intento3/: CMakeLists.txt  package.xml
turtlesim/intento3/include/: mainwindow.h
turtlesim/intento3/launch/: demo.launch.py
turtlesim/intento3/src/: main.cpp  mainwindow.cpp
turtlesim/intento3/ui/: mainwindow.ui
turtlesim/src/intentoqml3/: CMakeLists.txt  main.cpp  main.qml  package.xml  qml.qrc  rosnode.cpp  rosnode.h
